--- a/index.html
+++ b/index.html
@@ -1,20 +1,35 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TechFuture</title>
-    <link rel="stylesheet" href="style.css">
-    <style>
-        body {
-            background-image: url(img.css/futurista.jpg);
-            background-repeat: no-repeat;
-            background-size: cover;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>TechFuture Summit 2025</title>
+  <link rel="stylesheet" href="style.css" />
+  <style>
+    body {
+      background-image: url(imgbackground.css/back.png)
+    }
+
+  </style>
 </head>
 <body>
-  <h1>TechFuture Summit</h1>
+
+  <nav class="navbar">
+    <ul>
+      <li><a href="sobre.html">Sobre</a></li>
+      <li><a href="palestrantes.html">Palestrantes</a></li>
+      <li><a href="inscricao.html">Inscrição</a></li>
+    </ul>
+  </nav>
+
+  <header>
+    <h1>TechFuture Summit 2025</h1>
+    <p>O evento para discutir as tendências mais inovadoras de tecnologia e design!</p>
+  </header>
+
+  <footer>
+    <p>&copy; 2025 TechConnect</p>
+  </footer>
+
 </body>
 </html>
